--- a/#src/scss/index/content.scss
+++ b/#src/scss/index/content.scss
@@ -18,7 +18,7 @@
         position: absolute;
         top: 0;
         right: 0;
-        background: url(../../img/bg.png) no-repeat;
+        background: url(./../img/bg.png) no-repeat;
         background-size: cover;
         z-index: -2;
         width: 1105px;
